--- a/MvcCV/Views/Shared/_AdminLayout.cshtml
+++ b/MvcCV/Views/Shared/_AdminLayout.cshtml
@@ -29,12 +29,12 @@
         <!-- Main Sidebar Container -->
         <aside class="main-sidebar sidebar-dark-primary elevation-4">
             <!-- Brand Logo -->
-            <a href="../../index3.html" class="brand-link">
+            <a href="/Default/Index/" class="brand-link">
                 <img src="/AdminLTE-3.0.4/dist/img/AdminLTELogo.png"
                      alt="AdminLTE Logo"
                      class="brand-image img-circle elevation-3"
                      style="opacity: .8">
-                <span class="brand-text font-weight-light">AdminLTE 3</span>
+                <span class="brand-text font-weight-light">Siteye Git</span>
             </a>
 
             <!-- Sidebar -->
@@ -65,11 +65,11 @@
 
                         </li>
                         <li class="nav-item">
-                            <a href="../widgets.html" class="nav-link">
+                            <a href="/Egitim/Index/" class="nav-link">
                                 <i class="nav-icon fas fa-th"></i>
                                 <p>
                                     Egitimlerim
-                                    <span class="right badge badge-danger">New</span>
+                                    
                                 </p>
                             </a>
                         </li>
@@ -96,16 +96,16 @@
 
 
                         <li class="nav-item">
-                            <a href="../calendar.html" class="nav-link">
+                            <a href="/Yetenek/Index" class="nav-link">
                                 <i class="nav-icon far fa-calendar-alt"></i>
                                 <p>
                                     Yeteneklerim
-                                    <span class="badge badge-info right">2</span>
+                                    
                                 </p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="../gallery.html" class="nav-link">
+                            <a href="/Sertifika/Index/" class="nav-link">
                                 <i class="nav-icon far fa-image"></i>
                                 <p>
                                     Sertifikalarım
