--- a/MvcCV/Views/Yetenek/Index.cshtml
+++ b/MvcCV/Views/Yetenek/Index.cshtml
@@ -1,8 +1,13 @@
 ﻿
+
+@using MvcCV.Models.Entity
+@model List<TblYetenek>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
+@{ string renk = " ";}
+@{ string labelrenk = " ";}
 
 <!DOCTYPE html>
 <html>
@@ -18,57 +23,77 @@
                                     <h3 class="card-title">Yetenek Tablom</h3>
                                 </div>
                                 <!-- /.card-header -->
+                                <a href="/Yetenek/YeniYetenek" style="width:150px; margin:10px;" class="btn btn-info">Yeni Yetenek Ekle</a>
                                 <div class="card-body">
                                     <table class="table table-bordered">
                                         <thead>
                                             <tr>
                                                 <th style="width: 10px">#</th>
-                                                <th>Task</th>
-                                                <th>Progress</th>
-                                                <th style="width: 40px">Label</th>
+                                                <th>Yetenek</th>
+                                                <th>Derece</th>
+                                                <th style="width: 40px">Oran</th>
+                                                <th>Düzenle</th>
+                                                <th>Sil</th>
+                                               
                                             </tr>
                                         </thead>
                                         <tbody>
-                                            <tr>
-                                                <td>1.</td>
-                                                <td>Update software</td>
-                                                <td>
-                                                    <div class="progress progress-xs">
-                                                        <div class="progress-bar progress-bar-danger" style="width: 55%"></div>
-                                                    </div>
-                                                </td>
-                                                <td><span class="badge bg-danger">55%</span></td>
-                                            </tr>
-                                            <tr>
-                                                <td>2.</td>
-                                                <td>Clean database</td>
-                                                <td>
-                                                    <div class="progress progress-xs">
-                                                        <div class="progress-bar bg-warning" style="width: 70%"></div>
-                                                    </div>
-                                                </td>
-                                                <td><span class="badge bg-warning">70%</span></td>
-                                            </tr>
-                                            <tr>
-                                                <td>3.</td>
-                                                <td>Cron job running</td>
-                                                <td>
-                                                    <div class="progress progress-xs progress-striped active">
-                                                        <div class="progress-bar bg-primary" style="width: 30%"></div>
-                                                    </div>
-                                                </td>
-                                                <td><span class="badge bg-primary">30%</span></td>
-                                            </tr>
-                                            <tr>
-                                                <td>4.</td>
-                                                <td>Fix and squish bugs</td>
-                                                <td>
-                                                    <div class="progress progress-xs progress-striped active">
-                                                        <div class="progress-bar bg-success" style="width: 90%"></div>
-                                                    </div>
-                                                </td>
-                                                <td><span class="badge bg-success">90%</span></td>
-                                            </tr>
+                                            @foreach (var item in Model)
+                                            {
+                                                if(item.Oran>=0 && item.Oran <= 50)
+                                                {
+                                                    renk = "progress-bar bg-danger";
+                                                    labelrenk = "badge bg-danger";
+                                                }
+
+                                                if (item.Oran >= 51 && item.Oran <= 70)
+                                                {
+                                                    renk = "progress-bar bg-warning";
+                                                    labelrenk = "badge bg-warning";
+                                                }
+
+                                                if (item.Oran >= 71 && item.Oran <= 84)
+                                                {
+                                                    renk = "progress-bar bg-primary";
+                                                    labelrenk = "badge bg-primary";
+                                                }
+
+                                                if (item.Oran >= 85 && item.Oran <= 100)
+                                                {
+                                                    renk = "progress-bar bg-success";
+                                                    labelrenk = "badge bg-success";
+                                                }
+
+
+
+                                                <tr>
+                                                    <td>@item.ID</td>
+                                                    <td>@item.Yetenek</td>
+
+                                                    <td>
+                                                        <div class="progress progress-xs">
+                                                            <div class="@renk" style="width:@item.Oran%"></div>
+                                                        </div>
+                                                    </td>
+                                                    <td><span class="@labelrenk">@item.Oran%</span></td>
+                                                    <td>
+                                                        <a class="btn btn-info btn-sm" href="/Yetenek/YetenekGüncelle/@item.ID">
+                                                            <i class="fas fa-pencil-alt">
+                                                            </i>
+                                                            Güncelle
+                                                        </a>
+                                                        </td>
+                                                        <td>
+                                                        <a class="btn btn-danger btn-sm" href="/Yetenek/YetenekSil/@item.ID">
+                                                            <i class="fas fa-trash">
+                                                            </i>
+                                                            Delete
+                                                        </a>
+                                                            </td>
+                                                    
+                                                </tr>
+                                            }
+                                        
                                         </tbody>
                                     </table>
                                 </div>
