iletisim was added

--- a/MvcCV/Views/Iletisim/Index.cshtml
+++ b/MvcCV/Views/Iletisim/Index.cshtml
@@ -15,33 +15,37 @@
                 <!-- /.col -->
                 <div class="col-md-12">
                     <div class="card">
-                        
+                  
                         <div class="card-body">
-                            
-                                <div class="tab-pane" id="timeline">
-   
+
+                            <div class="tab-pane" id="timeline">
+                                <!-- The timeline -->
+                               
+                                <div class="timeline timeline-inverse">
+                                   @foreach(var item in Model) {
+
                                         <div class="time-label">
                                             <span class="bg-danger">
-                                                10 Feb. 2014
+                                                @item.Traih
                                             </span>
                                         </div>
-     
+
                                         <div>
                                             <i class="fas fa-comments bg-warning"></i>
                                             <div class="timeline-item">
-                                                <span class="time"><i class="far fa-clock"></i> 27 mins ago</span>
-                                                <h3 class="timeline-header"><a href="#">Jay White</a> commented on your post</h3>
+                                                <span class="time"><i class="far fa-clock"></i> @item.Mail</span>
+                                                <h3 class="timeline-header"><a href="#">@item.AdSoyad</a> @item.Konu</h3>
                                                 <div class="timeline-body">
-                                                    Take me to your leader!
-                                                    Switzerland is small and neutral!
-                                                    We are more like Germany, ambitious and misunderstood!
+                                                    @item.Mesaj
                                                 </div>
-                                                <div class="timeline-footer">
-                                                    <a href="#" class="btn btn-warning btn-flat btn-sm">View comment</a>
-                                                </div>
+                                               
                                             </div>
                                         </div>
+
+                                   }
                                     </div>
+                                
+                                </div>
                                 </div>
                             </div>
                             <!-- /.tab-content -->
@@ -50,10 +54,9 @@
                     <!-- /.nav-tabs-custom -->
                 </div>
                 <!-- /.col -->
-            </div>
+
             <!-- /.row -->
        
     </section>
 </body>
 </html>
-
