profile img was added

--- a/MvcCV/Views/Iletisim/Index.cshtml
+++ b/MvcCV/Views/Iletisim/Index.cshtml
@@ -35,10 +35,11 @@
                                             <div class="timeline-item">
                                                 <span class="time"><i class="far fa-clock"></i> @item.Mail</span>
                                                 <h3 class="timeline-header"><a href="#">@item.AdSoyad</a> @item.Konu</h3>
+                                                
                                                 <div class="timeline-body">
                                                     @item.Mesaj
                                                 </div>
-                                               
+                                               <a href="/Iletisim/MesajSil/@item.ID" class="btn btn-danger" style="float:right">Sil</a>
                                             </div>
                                         </div>
 
