--- a/MvcCV/Views/Hakkımda/Index.cshtml
+++ b/MvcCV/Views/Hakkımda/Index.cshtml
@@ -1,27 +1,39 @@
-﻿
+﻿@using MvcCV.Models.Entity
+@model List<TblHakkimda>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Hakkımda Menüsü</h2>
-<table class="table table-bordered">
-    <tr>
-        <td>ID</td>
-        <td>Ad</td>
-        <td>Sehir</td>
-    </tr>
+<br />
+<h2>Hakkımda Düzenleme Sayfası</h2>
+<br />
+<form method="post">
+    @foreach (var item in Model)
+    {
+        <label>Ad:</label>
+        <input type="text" class="form-control" name="Ad" value="@item.Ad" />
 
-    <tr>
-        <td>1</td>
-        <td>Batuhan</td>
-        <td>Artvin</td>
-    </tr>
+        <label>Soyad :</label>
+        <input type="text" class="form-control" name="Soyad" value="@item.Soyad" />
 
-    <tr>
-        <td>2</td>
-        <td>Fatma</td>
-        <td>Artvin</td>
-    </tr>
-</table>
+        <label>Adres :</label>
+        <input type="text" class="form-control" name="Adres" value="@item.Adres" />
+
+        <label>Telefon :</label>
+        <input type="text" class="form-control" name="Telefon" value="@item.Telefon" />
+
+        <label>Mail :</label>
+        <input type="text" class="form-control" name="Mail" value="@item.Mail" />
+
+        <label>Resim :</label>
+        <input type="text" class="form-control" name="Resim" value="@item.Resim" />
+
+        <label>Aciklama :</label>
+        <input type="text" class="form-control" name="Aciklama" value="@item.Aciklama" />
+    }
+
+    <br />
+    <button class="btn btn-info">Güncelle</button>
+</form>
 
