--- a/MvcCV/Views/Shared/_AdminLayout.cshtml
+++ b/MvcCV/Views/Shared/_AdminLayout.cshtml
@@ -83,11 +83,11 @@
 
                         </li>
                         <li class="nav-item has-treeview">
-                            <a href="#" class="nav-link">
+                            <a href="/Hobilerim/Index/" class="nav-link">
                                 <i class="nav-icon fas fa-chart-pie"></i>
                                 <p>
                                     Hobilerim
-                                    <i class="right fas fa-angle-left"></i>
+                                  
                                 </p>
                             </a>
 
@@ -114,7 +114,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a href="../gallery.html" class="nav-link">
+                            <a href="/Iletisim/Index" class="nav-link">
                                 <i class="nav-icon far fa-image"></i>
                                 <p>
                                     Iletişim
