Colors was changed

--- a/MvcCV/Views/Default/Egitim.cshtml
+++ b/MvcCV/Views/Default/Egitim.cshtml
@@ -2,7 +2,7 @@
 @model List<TblEgitim>
 
 <div class="resume-section-content">
-    <h2 class="mb-5">Eğitim Hayatım</h2>
+    <h2 class="mb-5">EĞİTİM HAYATIM</h2>
     @foreach(var item in Model) {
     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
         <div class="flex-grow-1">
