--- a/MvcCV/Views/Shared/_AdminLayout.cshtml
+++ b/MvcCV/Views/Shared/_AdminLayout.cshtml
@@ -27,14 +27,11 @@
      
         <!-- /.navbar -->
         <!-- Main Sidebar Container -->
-        <aside style="background-color:pink;" class="main-sidebar sidebar-dark-primary elevation-4">
+        <aside style="background: linear-gradient(to right, #bdc3c7, #2c3e50);" class="main-sidebar sidebar-dark-primary elevation-4">
             <!-- Brand Logo -->
             <a href="/Default/Index/" class="brand-link">
-                <img src="/AdminLTE-3.0.4/dist/img/AdminLTELogo.png"
-                     alt="AdminLTE Logo"
-                     class="brand-image img-circle elevation-3"
-                     style="opacity: .8">
-                <span class="brand-text font-weight-light">Siteye Git</span>
+                <i class="nav-icon fa-regular fa-circle-up" ></i>
+                <p style="text-align:center">Siteye Git</p>
             </a>
 
             <!-- Sidebar -->
@@ -42,7 +39,7 @@
                 <!-- Sidebar user (optional) -->
                 <div class="user-panel mt-3 pb-3 mb-3 d-flex">
                     <div class="image">
-                        <img src="/AdminLTE-3.0.4/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
+                        <img src="~/Content/pngwing.com (40).png" class="img-circle elevation-2" alt="User Image">
                     </div>
                     <div class="info">
                         <a href="#" class="d-block">Admin Paneli</a>
@@ -51,11 +48,11 @@
 
                 <!-- Sidebar Menu -->
                 <nav class="mt-2">
-                    <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+                    <ul style="color:black"  class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                         <!-- Add icons to the links using the .nav-icon class
     with font-awesome or any other icon font library -->
                         <li class="nav-item has-treeview">
-                            <a href="/Hakkımda/Index" class="nav-link">
+                            <a style="color:black;" href="/Hakkımda/Index" class="nav-link">
                                 <i class="nav-icon fas fa-tachometer-alt"></i>
                                 <p>
                                     Hakkımda
@@ -65,7 +62,7 @@
 
                         </li>
                         <li class="nav-item">
-                            <a href="/Egitim/Index/" class="nav-link">
+                            <a style="color:black;" href="/Egitim/Index/" class="nav-link">
                                 <i class="nav-icon fas fa-th"></i>
                                 <p>
                                     Egitimlerim
@@ -74,7 +71,7 @@
                             </a>
                         </li>
                         <li class="nav-item has-treeview">
-                            <a href="/Deneyim/Index" class="nav-link">
+                            <a style="color:black;" href="/Deneyim/Index" class="nav-link">
                                 <i class="nav-icon fas fa-copy"></i>
                                 <p>
                                     Deneyimlerim
@@ -83,7 +80,7 @@
 
                         </li>
                         <li class="nav-item has-treeview">
-                            <a href="/Hobilerim/Index/" class="nav-link">
+                            <a style="color:black;" href="/Hobilerim/Index/" class="nav-link">
                                 <i class="nav-icon fas fa-chart-pie"></i>
                                 <p>
                                     Hobilerim
@@ -96,7 +93,7 @@
 
 
                         <li class="nav-item">
-                            <a href="/Yetenek/Index" class="nav-link">
+                            <a style="color:black;" href="/Yetenek/Index" class="nav-link">
                                 <i class="nav-icon far fa-calendar-alt"></i>
                                 <p>
                                     Yeteneklerim
@@ -105,7 +102,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="/Sertifika/Index/" class="nav-link">
+                            <a style="color:black;" href="/Sertifika/Index/" class="nav-link">
                                 <i class="nav-icon far fa-image"></i>
                                 <p>
                                     Sertifikalarım
@@ -114,7 +111,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a href="/Iletisim/Index" class="nav-link">
+                            <a style="color:black;" href="/Iletisim/Index" class="nav-link">
                                 <i class="nav-icon far fa-image"></i>
                                 <p>
                                     Iletişim
@@ -123,8 +120,8 @@
                         </li>
 
                         <li class="nav-item">
-                            <a href="/SosyalMedya/Index" class="nav-link">
-                                <i class="nav-icon fas fa-circle-o-notch"></i>
+                            <a style="color:black;" href="/SosyalMedya/Index" class="nav-link">
+                                <i class="nav-icon fas fa-th"></i>
                                 <p>
                                     Sosyal Medya
                                 </p>
@@ -132,8 +129,8 @@
                         </li>
 
                         <li class="nav-item">
-                            <a href="/Login/LogOut" class="nav-link">
-                                <i class="nav-icon far fa-times-circle"></i>
+                            <a style="color:black;" href="/Login/LogOut" class="nav-link">
+                                <i class="nav-icon fas fa-times-circle"></i>
                                 <p>
                                     Çıkış
                                 </p>
