--- a/MvcCV/Views/Default/Deneyim.cshtml
+++ b/MvcCV/Views/Default/Deneyim.cshtml
@@ -3,7 +3,7 @@
 
 
 <div class="resume-section-content">
-    <h2 class="mb-5">Experience</h2>
+    <h2 class="mb-5">DENEYİMLERİM</h2>
     @foreach(var x in Model)
     {
 
